Add Google Analytics.

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -13,6 +13,7 @@
     - else
       %meta{ name: "description", content: "Documentation for Lita, a chat bot written in Ruby." }
     = stylesheet_link_tag "application"
+    = partial "google_analytics"
   %body
     %nav.navbar.navbar-default.navbar-static-top.navbar-inverse{ role: "navigation" }
       .container
