--- a/source/plugin-authoring/extensions.html.haml
+++ b/source/plugin-authoring/extensions.html.haml
@@ -32,7 +32,7 @@ title: Plugin Authoring
           %th Payload
         %tr
           %td <code>:before_run</code>
-          %td Called when <code>Lita.run</code> is invoked. Useful for extensions that need want to perform operations just before the robot starts.
+          %td Called when <code>Lita.run</code> is invoked. Useful for extensions that need to perform operations just before the robot starts.
           %td
             %ul
               %li <code>:config_path</code> (String) - The file path to the Lita config file that will be loaded, or <code>nil</code> if there is no config file.
