Deployment --> Daemonization in navigation.

--- a/source/getting-started/_menu.haml
+++ b/source/getting-started/_menu.haml
@@ -29,4 +29,4 @@
       = link_to 'Deployment', '/getting-started/deployment/'
       %ul
         %li= link_to 'Heroku', '/getting-started/deployment/#heroku'
-        %li= link_to 'Deployment', '/getting-started/deployment/#daemonization'
+        %li= link_to 'Daemonization', '/getting-started/deployment/#daemonization'
