Add page on the versioning and deprecation policy.

--- a/source/getting-started/_menu.haml
+++ b/source/getting-started/_menu.haml
@@ -30,3 +30,7 @@
       %ul
         %li= link_to 'Heroku', '/getting-started/deployment/#heroku'
         %li= link_to 'Daemonization', '/getting-started/deployment/#daemonization'
+    %li
+      = link_to 'Versioning Policy', '/getting-started/versioning-policy/'
+      %ul
+        %li= link_to 'Deprecation Policy', '/getting-started/versioning-policy/#deprecation-policy'
