--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -32,6 +32,7 @@
               %li= link_to 'Configuration', '/getting-started/configuration/'
               %li= link_to 'Usage', '/getting-started/usage/'
               %li= link_to 'Deployment', '/getting-started/deployment/'
+              %li= link_to 'Versioning Policy', '/getting-started/versioning-policy/'
           %li.dropdown
             %a{ href: '/plugin-authoring/' }
               Plugin Authoring
