--- a/source/releases/4.html.haml
+++ b/source/releases/4.html.haml
@@ -46,4 +46,114 @@ title: Lita 4.0
           %p The redis configuration attribute is now a hash. Lita 4 will continue to support struct-style access, but only hash-style access will be supported in Lita 5, so you should update now.
           %p Example: <code>config.redis.host = "redis.example.com"</code> will become <code>config.redis[:host] = "redis.example.com"</code>
 
+      %p In addition to these configuration changes, Lita's built-in daemonization feature has been deprecated without replacement. Instead, daemonization of your Lita process should be done using dedicated process management tools for your operating system. Popular choices are <a href="http://www.freedesktop.org/wiki/Software/systemd/">systemd</a>, <a href="http://upstart.ubuntu.com/">Upstart</a>, and <a href="http://smarden.org/runit/">runit</a>. Lita's built-in daemonization will be removed completely in Lita 5. For more detail on the reasons behind this change, Mike Perham's <a href="http://www.mikeperham.com/2014/09/22/dont-daemonize-your-daemons/">Don't Daemonize Your Daemons!</a> is good reading.
+
       %h3 Upgrading for plugin developers
+
+      %p In accordance with Lita's <a href="/getting-started/versioning-policy/">versioning policy</a>, Lita 4's only breaking change is the removal of one API that was already deprecated in Lita 3:
+
+      %ul
+        %li
+          %p
+            %strong Lita::User.find
+          %p This method was an alias for <code>Lita::User.create</code>, but had a misleading name, so it was deprecated in Lita 3. It has been removed completely in Lita 4. If you have any code that is still using <code>find</code>, change it to using <code>create</code> if you are creating a user, and one of the <code>find_by_*</code> methods if you're looking up an existing user.
+
+      %p Although this is the only breaking change in Lita 4, the new version introduces several new deprecations. All of these APIs will continue to work for Lita 4, but will be removed in Lita 5, so you should upgrade your plugins for future compatibility. The easiest way to upgrade your plugins is to change the code to use the Lita 4 versions of the deprecated APIs, then release a new gem with a dependency on Lita 4 or greater. If you want to make your plugin compatible with both the old and new APIs so that Lita 4 is not required to use your plugin, your plugin code should use multiple code paths, one for each deprecated API. It is recommended to take the easier approach, to reduce the complexity of your plugin code and help move users forward. After all, they can continue to use the existing version of your plugin if they aren't ready to upgrade to Lita 4.
+
+      %p The following APIs are now deprecated:
+
+      %ul
+        %li
+          %p
+            %strong Lita::Adapter.require_config
+          %p Lita 4 introduces a new, more powerful configuration system that is used by both adapters and handlers. While <code>require_config</code> only caused Lita to validate that a configuration attribute was set, the new system has more capabilities.
+          %p Example: <code>require_config(:foo)</code> will simply change to <code>config(:foo)</code>. Each attribute must be specified with a separate call to <code>config</code>.
+        %li
+          %p
+            %strong Lita::Adapter.required_configs
+          %p This attribute returns an array of required configuration attributes as set with <code>require_config</code>. If for some reason you were accessing this, you'll want to use <code>configuration</code> instead, although that returns a <code>Lita::Configuration</code> object rather than an array of simple values.
+        %li
+          %p
+            %strong Lita.config.adapter
+          %p Under the new configuration system, each adapter has its own configuration object under <code>Lita.config.adapters</code>, just like handlers always have. Configuration attributes defined using <code>Lita::Adapter.config</code> will be found at <code>Lita.config.adapters.your_adapter_namespace.your_configuration_attribute</code>.
+        %li
+          %p
+            %strong Lita::Handler.default_config
+          %p In Lita 3, handlers defined configuration attributes by defining the class method <code>default_config</code>, which was passed a <code>Lita::Config</code> object that behaved like an <code>OpenStruct</code>. This code should be converted to use the configuration system, which is achieved by callilng the class method <code>config</code> for each desired configuration attribute. The new system is more strict, so all configuration attributes must be declared, even if their default value is <code>nil</code>.
+          %p Example:
+          %p Before:
+          %pre
+            %code.ruby
+              :preserve
+                def self.default_config(config)
+                  config.use_special_mode = false
+                  config.custom_value = nil
+                end
+          %p After:
+          %pre
+            %code.ruby
+              :preserve
+                config :use_special_mode, default: false
+                config :custom_value
+          %p In either case, the handler's configuration can be accessed at runtime with <code>Lita::Handler#config</code>. If both types of configuration declarations are present, the old style will take precedence, for backwards compatibility.
+        %li
+          %p
+            %strong Lita::Config
+          %p This entire class is deprecated with the introduction of the new configuration system. If you were using this class directly before, you might want to consider using a hash or <code>OpenStruct</code> from the standard library. If you have a plugin that needs nested configuration attributes, the new configuration system's DSL allows for this without having to manually instantiate a configuration object.
+        %li
+          %p
+            %strong Lita::Authorization class methods
+          %p The authorization module is now a class, and all the methods are instance methods that use configuration derived from the currently running robot. Code should be upgraded to access authorization via the robot.
+          %p Example: <code>Lita::Authorization.user_in_group?(user, :group)</code> would now be <code>robot.auth.user_in_group?(user, :group)</code>.
+        %li
+          %p
+            %strong Lita::RSpec routing matchers
+          %p Lita 4's RSpec routing matchers use a new syntax that is more akin with RSpec style. Rather than enumerate each possible usage here, the following code block will demonstrate a few examples:
+          %pre
+            %code.ruby
+              :preserve
+                ### Lita 3
+
+                # passes but doesn't actually test anything
+                it { routes("foo") }
+
+                it { routes("foo").to(:bar) }
+
+                # bypasses the authorization protected_method requires
+                it { routes("foo").to(:protected_method) }
+
+                it { doesnt_route("foo").to(:bar) }
+
+                ### Lita 4
+
+                # actually ensures that the message matches at least one route
+                it { is_expected.to route("foo") }
+
+                it { is_expected.to route("foo").to(:bar) }
+
+                # requires the authorization group to be specified
+                it { is_expected.to route("foo").to(:protected_method).with_authorization_for(:baz_admins) }
+
+                # negating the expectation doesn't change the name of the matcher
+                it { is_expected.not_to route("foo").to(:bar) }
+          %p As you can see from the example above, the new matchers don't give a false positive when the name of the route is not supplied. Lita 3's routing matchers also ignored the authorization system, while Lita 4's do not. In order to test a route that requires authorization, use the <code>with_authorization_for</code> fluent interface. The routing syntax for testing HTTP routes and event handlers follows a similar style to the chat routes. When you run your test suite, the deprecation warnings will tell you exactly what the new syntax is whenever the old syntax is encountered. The old syntax will be removed in Lita 5.
+
+      %p Lastly, Lita 4 includes some internal API changes that don't cause runtime functionality to break, but may cause tests written against Lita 3 to fail if they were directly using or stubbing some of these old APIs. To make the transition smooth, Lita 4 has a special mode called "version 3 compatibility mode" that activates the old code paths while the test suite is running. Compatibility mode is turned on by default. When you're ready to upgrade your test suite, turn it off by adding the following code to <code>spec/spec_helper.rb</code>:
+
+      %pre
+        %code.ruby
+          :preserve
+            require "lita/rspec"
+
+            Lita.version_3_compatibility_mode = false
+
+      %p This may cause some tests to begin failing that pass with compatibility mode on. The cause of each failure will be one of the following:
+
+      %ul
+        %li Your code is using <code>Lita::Adapter.require_config</code>. Use <code>Lita::Adapter.config</code> instead.
+        %li Your code is stubbing one of the class methods on <code>Lita::Authorization</code>. If you're doing so that a test behaves as though a user is in a particular authorization group, you can use <code>robot.auth.add_user_to_group!(user, group)</code> instead. This new bang method does not require a "requesting user," making the programmatic management of authorization groups much simpler.
+        %li
+          %p Your code directly accesses or stubs class methods on the top-level Lita module. Most of the global state previously stored only on this object is now stored using a <code>Lita::Registry</code> object. Instead of resetting the state on the <code>Lita</code> module for each test, a fresh registry is used for each test. You can access the test's registry with the <code>registry</code> method from any test. Compatibility mode works by using the real <code>Lita</code> object instead of a fresh registry.
+          %p Example: <code>Lita.register_handler(MyTestHandler)</code> should change to <code>registry.register_handler(MyTestHandler)</code>.
+
+      %p Lita 3 compatibility mode will be removed in Lita 5, and only the new code paths will work.
