--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -18,8 +18,6 @@
     %nav.navbar.navbar-default.navbar-static-top.navbar-inverse{ role: "navigation" }
       .container
         = link_to 'Lita Documentation', '/', class: 'navbar-brand hidden-xs'
-        .hidden-xs= link_to 'Lita.io', 'https://www.lita.io/', class: 'btn btn-default navbar-btn navbar-right'
-        .navbar-text.navbar-right.hidden-xs
         %ul.nav.navbar-nav.navbar-right
           %li.dropdown
             %a{ href: '/getting-started/' }
@@ -53,6 +51,7 @@
             %ul.dropdown-menu
               %li= link_to 'Lita 4', '/releases/4/'
               %li= link_to 'Lita 3', '/releases/3/'
+          %li.navbar-link= link_to 'Lita.io <span class="glyphicon glyphicon-arrow-right"></span>', 'https://www.lita.io/'
     .content
       = yield
     %footer
