--- a/source/getting-started/plugins.html.haml
+++ b/source/getting-started/plugins.html.haml
@@ -16,7 +16,7 @@ title: "Getting Started: Plugins"
 
       %p The <a href="https://www.lita.io/plugins">plugins</a> page is a catalog of all Lita plugins, both adapters and handlers, that have been published to RubyGems. Use the catalog to find adapters for the chat service you want to use, and as many handlers as you want for added functionality.
 
-      %p Adding the plugins you choose to Lita is as simple as adding them to the Gemfile and running the <code>bundle</code> command in your shell to update the Gemfile.lock. The <code>bundle</code> command comes from Bundler, which is installed alongside Lita.
+      %p Adding the plugins you choose to Lita is as simple as adding them to the Gemfile and running the <kbd>bundle</kbd> command in your shell to update the Gemfile.lock. The <kbd>bundle</kbd> command comes from Bundler, which is installed alongside Lita.
 
       %p For example, to run Lita on HipChat with the karma and Google Images handlers, your complete Gemfile would look like this:
 
