--- a/source/getting-started/plugins.html.haml
+++ b/source/getting-started/plugins.html.haml
@@ -14,7 +14,7 @@ title: "Getting Started: Plugins"
 
       %p The core Lita gem provides a framework to build on, but includes only a minimal amount of functionality to Lita at runtime. To make real use of it, you'll want to install an adapter plugin to allow Lita to connect to the chat service of your choice, and handler plugins to add new behavior.
 
-      %p The <a href="https://www.lita.io/plugins">plugins</a> page is a catalog of all Lita plugins, both adapters and handlers, that have been published to RubyGems. Use the catalog to find adapters for the chat service you want to use, and as many handlers as you want for added functionality.
+      %p The <a href="https://www.lita.io/plugins">plugins</a> page is a catalog of all Lita plugins, both adapters and handlers, that have been published to RubyGems. Use the catalog to find an adapter for the chat service you want to use, and as many handlers as you want for added functionality.
 
       %p Adding the plugins you choose to Lita is as simple as adding them to the Gemfile and running the <kbd>bundle</kbd> command in your shell to update the Gemfile.lock. The <kbd>bundle</kbd> command comes from Bundler, which is installed alongside Lita.
 
