Add plugin types section to the plugin authoring overview.

--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -1,6 +1,9 @@
 %nav
   %ul.nav.nav-stacked
-    %li= link_to 'Overview', '/plugin-authoring/'
+    %li
+      = link_to 'Overview', '/plugin-authoring/'
+      %ul
+        %li= link_to 'Plugin types', '/plugin-authoring/#plugin-types'
     %li
       = link_to 'Adapters', '/plugin-authoring/adapters/'
       %ul
