--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -7,7 +7,10 @@
     %li
       = link_to 'Adapters', '/plugin-authoring/adapters/'
       %ul
-        %li= link_to 'Examples', '/plugin-authoring/adapters/#examples'
+        %li= link_to 'Generating an adapter', '/plugin-authoring/adapters/#generating'
+        %li= link_to 'Configuration', '/plugin-authoring/adapters/#configuration'
+        %li= link_to 'Required methods', '/plugin-authoring/adapters/#required-methods'
+        %li= link_to 'Block syntax', '/plugin-authoring/adapters/#block-syntax'
     %li
       = link_to 'Handlers', '/plugin-authoring/handlers/'
       %ul
@@ -16,6 +19,8 @@
         %li= link_to 'Timers', '/plugin-authoring/handlers/#timers'
         %li= link_to 'Configuration', '/plugin-authoring/handlers/#configuration'
         %li= link_to 'Examples', '/plugin-authoring/handlers/#examples'
+    %li
+      = link_to 'Configuration', '/plugin-authoring/configuration/'
     %li
       = link_to 'Events', '/plugin-authoring/events/'
       %ul
