--- a/source/plugin-authoring/adapters.html.haml
+++ b/source/plugin-authoring/adapters.html.haml
@@ -12,87 +12,240 @@ title: "Plugin Authoring: Adapters"
       .page-header.first-heading
         %h2 Adapters
 
-      %p An adapter is a plugin that allows Lita to connect to a particular chat service. It's a class that inherits from <code>Lita::Adapter</code>, implements a set of required methods, and is registered with Lita. Though not necessary, it's convention for the class to be within the <code>Lita::Adapters</code> namespace. Adapters can be defined explicitly as a class, or by passing a block to <code>Lita.register_adapter</code>.
+      %p An adapter is a plugin that allows Lita to connect to a particular chat service. It's a Ruby class that inherits from <code>Lita::Adapter</code> and implements a set of required methods. In this section of the guide, we'll walk through the process of creating a plugin for the fictitious chat service, FancyChat.
 
-      %p It's important to note that each adapter should employ its own concurrency mechanism (threads, events, etc.) so that incoming messages can still be processed even while a handler is processing a previous message.
+      %h3#generating Generating an adapter
 
-      %p To create a new adapter plugin, run the following command in your shell: <kbd>lita adapter <var>NAME_OF_YOUR_ADAPTER</var></kbd>
+      %p Start by generating the files for a new plugin by running <kbd>lita adapter <var>NAME_OF_YOUR_ADAPTER</var></kbd>. In this case, the name would be <kbd>fancychat</kbd>. You can type either <kbd>fancychat</kbd> or <kbd>lita-fancychat</kbd>. If you leave off the prefix, Lita will add it for you.
 
-      %h3#examples Examples
+      %p The generator command creates a new directory called <code>lita-fancychat</code> with all the files required for a Ruby gem. The adapter class will be defined in the file <code>lib/lita/handlers/fancychat.rb</code> and within the <code>Lita::Handlers</code> namespace. It's convention for Lita adapters to be in this namespace, but it's not strictly necessary. Any class in any location can serve as an adapter. Notice that the adapter is a class that inherits from <code>Lita::Adapter</code> and that the adapter is registered with Lita using the call <code>Lita.register_adapter(:fancychat, FancyChat)</code>. The first argument is a Ruby symbol which people will use to configure their Lita instances to use your adapter.
 
-      %h4 Class-based adapters
+      %p The generator also creates a test file for the adapter at <code>spec/lita/handlers/fancychat_spec.rb</code>. Testing is covered later in the guide.
 
-      %p Here is a bare bones example of an adapter for the fictitious chat service, FancyChat.
+      %p From here on out, it's your job to implement the required methods to make the adapter function!
+
+      %h3#configuration Configuration
+
+      %p Adapters will likely require some configuration in order to connect to the chat service, such as a username and password. To set up this configuration, use the class-level <code>config</code> method, which defines configuration attributes for the adapter. These attributes will be exposed to users on the <code>Lita.config.adapters.fancychat</code> object and they'll set values for them in their <code>lita_config.rb</code> file. Let's say Fancychat requires only two attributes to make a connection: username and password. We'll also add one optional attribute that will hold the names of the channels (chat rooms) Lita should join after connecting.
 
       %pre
         %code.ruby
           :preserve
-            require 'fancy_chat'
-
             module Lita
               module Adapters
-                class FancyChatAdapter < Adapter
-                  # Defines two configuration attributes for the adapter. See the configuration page
-                  # of this guide for more details.
-                  config :username
-                  config :password
-
-                  # Sets up the adapter and creates a new chat service client, using the
-                  # fictitious `fancy_chat` gem.
-                  def initialize(robot)
-                    super
-                    @client = FancyChat.new(robot.config.adapter.username, robot.config.adapter.password)
-                  end
-
-                  # Connects to the chat service and dispatches incoming messages to a
-                  # Lita::Robot instance.
-                  def run
-                    @client.connect
-                    sleep
-                  rescue Interrupt
-                    shut_down
-                  end
-
-                  # Sends messages from the robot to a user or room on the chat service.
-                  def send_messages(target, strings)
-                    strings.each { |string| @client.message(target, string) }
-                  end
-
-                  # Sets the topic for a chat room.
-                  def set_topic(room, new_topic)
-                    @client.topic(room, new_topic)
-                  end
-
-                  # Does any clean up necessary when disconnecting from the chat service.
-                  def shut_down
-                    @client.safe_shut_down
-                  end
+                class Fancychat &lt; Adapter
+                  config :username, type: String, required: true
+                  config :password, type: String, required: true
+                  config :channels, type: Array
                 end
 
-                # Adds the adapter to Lita's adapter registry. Users can now use the adapter
-                # by adding it to their Gemfile and setting `Lita.config.robot.adapter` to
-                # `:fancy_chat`.
-                Lita.register_adapter(:fancy_chat, FancyChatAdapter)
+                Lita.register_adapter(:fancychat, Fancychat)
               end
             end
 
-      %h4 Block-based adapters
-
-      %p Adapters call also be created by passing a block to <code>Lita.register_adapter</code>:
+      %p A user would then configure your adapter like this:
 
       %pre
         %code.ruby
           :preserve
-            Lita.register_adapter(:fancy_chat) do
-              config :username
-              config :password
+            Lita.configure do |config|
+              config.robot.adapter = :fancychat
+              config.adapters.fancychat.username = "litabot"
+              config.adapters.fancychat.username = "#n9sd90cs@MKfs"
+              config.adapters.fancychat.channels = ["#general", "#engineering"]
+            end
+
+      %p The <code>config</code> method takes the name of the attribute to create as a Ruby symbol, with a few optional parameters. For full details on using the <code>config</code> method, take a look at the <a href="/plugin-authoring/configuration/">configuration</a> page.
+
+      %h3#required-methods Required methods
+
+      %p With configuration out of the way, it's time to implement the required methods for the adapter to actually function. The abstract methods adapters should implement are: <em>run</em>, <em>shut_down</em>, <em>send_messages</em>, <em>set_topic</em>, <em>join</em>, and <em>part</em>.
+
+      %p In some cases, some of these methods may not be applicable to a particular chat service, in which case you can just leave them unimplemented, and plugins that call them will simply cause a warning to Lita's log saying the adapter doesn't implement the method.
+
+      %h4 run and shut_down
+
+      %p <code>run</code> is the most important method. This is what gets called by Lita when starting up and must establish a connection with the chat service and begin listening for incoming messages. The mechanism by which you do this is entirely up to you, but it's important that you implement some concurrency mechanism (threads, EventMachine, Celluloid, etc.) so that incoming messages can still be processed even while a previous message is still being processed. The <code>run</code> method itself should block, since Lita itself doesn't do anything to keep the robot running.
+
+      %p Imagine that Fancychat has its own client library for Ruby that handles concurrency. We can use the client to implement the adapter methods, beginning with run (some boilerplate code removed for brevity):
+
+      %pre
+        %code.ruby
+          :preserve
+            require 'fancychat'
+
+            class Fancychat &lt; Adapter
+              def initialize(robot)
+                super
+                @client = ::Fancychat::Client.new(config.username, config.password)
+              end
+
+              def run
+                @client.on_connect do
+                  robot.trigger(:connected)
+
+                  config.rooms.each { |room| @client.join(room) }
+                end
+
+                @client.on_message do |message, user, channel|
+                  user = Lita::User.find_by_name(user)
+                  user = Lita::User.create(user) unless user
+                  source = Lita::Source.new(user: user, room: channel)
+                  message = Lita::Message.new(robot, message, source)
+                  robot.receive(message)
+                end
+
+                @client.connect
+              end
+
+              def shut_down
+                @client.disconnect
+              end
+            end
+
+      %p That's a lot of code! Let's walk through what's happening here:
+
+      %p The Fancychat client library is going to do the heavy lifting for us, so we require it at the top of the file. Because all of the methods in the adapter will need to interface with the Fancychat service in some way, we override the constructor (<code>initialize</code>) to create an instance of the Fancychat client library with a username and password. The <code>config</code> method is a convenience method to access <code>Lita.config.adapters.fancychat</code>, so we can easily get at the values the user set for the configuration attributes we defined.
+
+      %p The <code>run</code> method has three responsibilites: Set up a callback to perform some one-time tasks when the connection to Fancychat is established, set up the logic for what to do when a message is received over Fancychat, and finally, connect to Fancychat.
+
+      %p The Fancychat client library provides an <code>on_connect</code> method which takes a block and will execute the block as soon as the connection is established. We want two things to happen at this point: we want to trigger a <code>:connected</code> event to the entire Lita system (full details about this can be found on the <a href="/plugin-authoring/events/">events</a> page), and we want Lita to join each of the chat rooms the user specified with the <code>rooms</code> configuration attribute.
+
+      %p The Fancychat client library also provides an <code>on_message</code> method which allows us to control what will happen when an message is received. The method yields the raw string message, the string username of the person who sent the message, and the string name of the channel it was sent in, if applicable. To dispatch this message to Lita's handler system, we must construct a few objects.
+
+      %p Lita keeps track of users using the <code>Lita::User</code> class and automatically saves them in Redis. Most of the time when Lita receives a message, it's from a user Lita has seen before, so we use <code>Lita::User.find_by_name</code> to try to find an existing user with that name. If one isn't found, we use the <code>create</code> method to initialize and save a new one. In either case, we now have a Lita user object.
+
+      %p Next, we construct a <code>Lita::Source</code> object, which represents the person or room where a message originated. Messages will usually always have a user associated with them, whereas the room/channel may be optional if the message was sent directly to Lita privately.
+
+      %p Next, we create a <code>Lita::Message</code> object to represent the actual message. This contains a reference to the currently running <code>Lita::Robot</code> object, and the message and source objects we just created.
+
+      %p Finally, we pass the message object to the currently running robot using the <code>receive</code> method. Lita will take everything from there.
+
+      %p Now that we've set up the behavior for connection and incoming message handling, all run needs to do is actually connect, which is handled by the client library's <code>connect</code> method. This will block until it receives a method call telling it to disconnect or the Lita process is sent a signal to interrupt/terminate.
+
+      %p <code>shut_down</code> is called automatically when the Lita process is killed. Use it to perform any last minute clean up that might be necessary. In this case, we just call the Fancychat client library's <code>disconnect</code> method for a clean shut down. In many cases, the body of the <code>shut_down</code> method can be empty, because no clean up is required.
+
+      %h4 Other methods
+
+      %p The other methods adapters implement are generally not as complicated as the <code>run</code> method. The most important remaining method is <code>send_messages</code>, which is the interface other plugins use to send messages out from Lita back to users and chat rooms.
+
+      %pre
+        %code.ruby
+          :preserve
+            class Fancychat &lt; Adapter
+              def send_messages(target, messages)
+                messages.each do |message|
+                  @client.send(target.room || target.user, message)
+                end
+              end
+            end
+
+      %p <code>send_messages</code> receives a target, which is a <code>Lita::Source</code> object designating the desired recipient of the message, and messages, an array of strings to send to the target. In this case, we simply call the Fancychat client library's <code>send</code> method with each message, and it handles the details of the network communication.
+
+      %p Setting a chat room's topic message, and making Lita join and part chat rooms on demand are the last bits of functionality adapters can provide. These are generally similar to sending messages, in the sense that you will probably just be delegating to a client library for the chat service, which is what we will do here with Fancychat:
+
+      %pre
+        %code.ruby
+          :preserve
+            class FancyChat &lt; Adapter
+              def set_topic(target, topic)
+                @client.set_topic(target.source, topic)
+              end
+
+              def join(room_id)
+                @client.join(room_id)
+              end
+
+              def part(room_id)
+                @client.part(room_id)
+              end
+            end
+
+      %p The body of these methods are self-explanatory. With that, our adapter is finished. Let's take a look at it all together:
+
+
+      %pre
+        %code.ruby
+          :preserve
+            require 'fancychat'
+
+            module Lita
+              module Adapters
+                class Fancychat &lt; Adapter
+                  config :username, type: String, required: true
+                  config :password, type: String, required: true
+                  config :channels, type: Array
+
+                  def initialize(robot)
+                    super
+                    @client = ::Fancychat::Client.new(config.username, config.password)
+                  end
+
+                  def run
+                    @client.on_connect do
+                      robot.trigger(:connected)
+
+                      config.rooms.each { |room| @client.join(room) }
+                    end
+
+                    @client.on_message do |message, user, channel|
+                      user = Lita::User.find_by_name(user)
+                      user = Lita::User.create(user) unless user
+                      source = Lita::Source.new(user: user, room: channel)
+                      message = Lita::Message.new(robot, message, source)
+                      robot.receive(message)
+                    end
+
+                    @client.connect
+                  end
+
+                  def send_messages(target, messages)
+                    messages.each do |message|
+                      @client.send(target.room || target.user, message)
+                    end
+                  end
+
+                  def shut_down
+                    @client.disconnect
+                  end
+
+                  def set_topic(target, topic)
+                    @client.set_topic(target.source, topic)
+                  end
+
+                  def join(room_id)
+                    @client.join(room_id)
+                  end
+
+                  def part(room_id)
+                    @client.part(room_id)
+                  end
+                end
+
+                Lita.register_adapter(:fancychat, Fancychat)
+              end
+            end
+
+      %h3#block-syntax Block syntax
+
+      %p If you're just playing around, and don't want to deal with all the boilerplate of a Ruby gem, adapters can also be created by passing a block to <code>Lita.register_adapter</code>:
+
+      %pre
+        %code.ruby
+          :preserve
+            Lita.register_adapter(:fancychat) do
+              config :username, type: String, required: true
+              config :password, type: String, required: true
+              config :channels, type: Array
 
               def initialize(robot)
                 super
-                @client = FancyChat.new(robot.config.adapter.username, robot.config.adapter.password)
+                @client = ::Fancychat::Client.new(config.username, config.password)
               end
 
               # etc...
             end
 
-      %p For more detailed examples, check out the built in shell adapter, <a href="https://github.com/jimmycuadra/lita-hipchat">lita-hipchat</a>, or <a href="https://github.com/jimmycuadra/lita-irc">lita-irc</a>. Refer to the <a href="http://rdoc.info/gems/lita/frames">API documentation</a> for the exact API adapters must implement.
+      %p This has the same effect as defining a named class and registering it manually, except that your adapter will be an anonymous class only stored internally in Lita's registry.
+
+      %p For more detailed examples of adapters, check out the built in shell adapter, <a href="https://github.com/jimmycuadra/lita-hipchat">lita-hipchat</a>, or <a href="https://github.com/jimmycuadra/lita-irc">lita-irc</a>. Refer to the <a href="http://rdoc.info/gems/lita/frames">API documentation</a> for the exact API adapters must implement.
