Add note to v4 release page about improved docs.

--- a/source/releases/4.html.haml
+++ b/source/releases/4.html.haml
@@ -30,6 +30,8 @@ title: Lita 4.0
         %li Major refactoring to reduce reliance on global state, offering safer, more predictable programming and testing.
         %li Improved failure detection and messaging for Redis and the built-in web server.
 
+      %p The guides on the documentation site have also been greatly improved.
+
       %h3 Upgrading for Lita users
 
       %p Lita 4 is completely backwards compatible for users. All existing functionality and plugins will continue to work. However, Lita 4 introduces a new configuration system, and a few things will need to change in your <code>lita_config.rb</code> file as the plugins you use begin to take advantage of features from Lita 4. Most configuration will remain unchanged, but a couple of attributes will emit deprecation warnings until they are updated to be compatible with the new style. These attributes are:
